--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg:
   flutter_native_splash: ^2.3.7
+  json_serializable: ^6.8.0
+  freezed: 
+  json_annotation: ^4.9.0
+  pretty_dio_logger:
+  shared_preferences:
+  dio:
+  retrofit:
+  retrofit_generator:
 
 
 dev_dependencies:
@@ -50,6 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
