--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,18 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
+    flavorDimensions "default"
+    productFlavors {
+        production {
+            dimension "default"
+            resValue "string", "app_name" ,"FuelGo Production" //label of the app in the folder string
+        }
+        development {
+            dimension "default"
+            applicationIdSuffix ".dev" //appId with .dev
+            resValue "string", "app_name" ,"FuelGo Development"
+        }
+    }
 
     buildTypes {
         release {
